# ooi-sandbox

./: main.py  ooi-temp-data-explore.ipynb  pyproject.toml  trial2automatefile.ipynb
