[project]
name = "video-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.3.0",
    "hvplot>=0.11.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "numpy>=2.2.4",
    "pyarrow>=19.0.1",
    "scipy>=1.15.2",
    "xarray>=2025.3.0",
]
